<resources>
    <string name="app_name">Material Design Training</string>
    <string name="hello_world">Hello world!</string>
    <string name="txt_search">Search</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_validate">Validate</string>
    <string name="txt_send">Send</string>
    <string name="navdrawer_group_material_design">Material Design</string>
    <string name="navdrawer_child_introduction">Introduction</string>
    <string name="navdrawer_group_what_is_material">What is material?</string>
    <string name="navdrawer_child_environment">Environment</string>
    <string name="navdrawer_child_material_properties">Material properties</string>
    <string name="navdrawer_child_objects_in_3d_space">Objects in 3D space</string>
    <string name="navdrawer_group_animation">Animation</string>
    <string name="navdrawer_child_authentic_motion">Authentic motion</string>
    <string name="navdrawer_child_responsive_interaction">Responsive interaction</string>
    <string name="navdrawer_child_meaningful_transitions">Meaningful transitions</string>
    <string name="navdrawer_child_delightful_details">Delightful details</string>
    <string name="navdrawer_group_style">Style</string>
    <string name="navdrawer_child_color">Color</string>
    <string name="navdrawer_child_icons">Icons</string>
    <string name="navdrawer_child_imagery">Imagery</string>
    <string name="navdrawer_child_typography">Typography</string>
    <string name="navdrawer_group_layout">Layout</string>
    <string name="navdrawer_child_principles">Principles</string>
    <string name="navdrawer_child_units_and_measurements">Units and measurements</string>
    <string name="navdrawer_child_metrics_and_keylines">Metrics &amp; keylines</string>
    <string name="navdrawer_child_structure">Structure</string>
    <string name="navdrawer_group_components">Components</string>
    <string name="navdrawer_child_bottom_sheets">Bottom sheets</string>
    <string name="navdrawer_child_buttons">Buttons</string>
    <string name="navdrawer_child_buttons_floating_action_button">Buttons: Floating Action Button</string>
    <string name="navdrawer_child_cards">Cards</string>
    <string name="navdrawer_child_chips">Chips</string>
    <string name="navdrawer_child_data_tables">Data tables</string>
    <string name="navdrawer_child_dialogs">Dialogs</string>
    <string name="navdrawer_child_dividers">Dividers</string>
    <string name="navdrawer_child_grid_lists">Grid Lists</string>
    <string name="navdrawer_child_lists">Lists</string>
    <string name="navdrawer_child_lists_controls">Lists: Controls</string>
    <string name="navdrawer_child_menus">Menus</string>
    <string name="navdrawer_child_pickers">Pickers</string>
    <string name="navdrawer_child_progress_and_activity">Progress &amp; activity</string>
    <string name="navdrawer_child_selection_controls">Selection controls</string>
    <string name="navdrawer_child_sliders">Sliders</string>
    <string name="navdrawer_child_snackbars_and_toasts">Snackbars &amp; toasts</string>
    <string name="navdrawer_child_subheaders">Subheaders</string>
    <string name="navdrawer_child_tabs">Tabs</string>
    <string name="navdrawer_child_text_fields">Text fields</string>
    <string name="navdrawer_child_toolbars">Toolbars</string>
    <string name="navdrawer_child_tooltips">Tooltips</string>
    <string name="navdrawer_group_patterns">Patterns</string>
    <string name="navdrawer_child_app_structure">App structure</string>
    <string name="navdrawer_child_data_formats">Data formats</string>
    <string name="navdrawer_child_errors">Errors</string>
    <string name="navdrawer_child_gestures">Gestures</string>
    <string name="navdrawer_child_loading_images">Loading images</string>
    <string name="navdrawer_child_navigation_drawer">Navigation drawer</string>
    <string name="navdrawer_child_navigational_transitions">Navigational transitions</string>
    <string name="navdrawer_child_scrolling_techniques">Scrolling techniques</string>
    <string name="navdrawer_child_search">Search</string>
    <string name="navdrawer_child_selection">Selection</string>
    <string name="navdrawer_child_settings">Settings</string>
    <string name="navdrawer_child_swipe_to_refresh">Swipe to refresh</string>
    <string name="navdrawer_group_usability">Usability</string>
    <string name="navdrawer_child_accessibility">Accessibility</string>
    <string name="navdrawer_child_bidirectionality">Bidirectionality</string>
    <string name="navdrawer_group_resources">Resources</string>
    <string name="navdrawer_child_color_palettes">Color palettes</string>
    <string name="navdrawer_child_layout_templates">Layout templates</string>
    <string name="navdrawer_child_roboto_and_noto_fonts">Roboto &amp; Noto fonts</string>
    <string name="navdrawer_child_sticker_sheets_and_icons">Sticker sheets &amp; icons</string>
    <string name="navdrawer_group_whats_new">What\'s new</string>
    <string name="navdrawer_child_whats_new">What\'s new</string>
    <string name="navdrawer_item_settings">Settings</string>
    <string name="navdrawer_item_developer_mode">Developer Mode</string>
    <string name="fragment_introduction">Introduction</string>
    <string name="fragment_introduction_txt">We challenged ourselves to create a visual language for our users that synthesizes the classic principles of good design with the innovation and possibility of technology and science. This is material design. This spec is a living document that will be updated as we continue to develop the tenets and specifics of material design.</string>
    <string name="fragment_introduction_goals">Goals</string>
    <string name="fragment_introduction_goals_txt">Create a visual language that synthesizes classic principles of good design with the innovation and possibility of technology and science.
        \n\nDevelop a single underlying system that allows for a unified experience across platforms and device sizes. Mobile precepts are fundamental, but touch, voice, mouse, and keyboard are all ﬁrst-class input methods.
    </string>
    <string name="fragment_introduction_principles">Principles</string>
    <string name="fragment_introduction_principles_txt"><b>Material is the metaphor</b>
        \n\nA material metaphor is the unifying theory of a rationalized space and a system of motion. The material is grounded in tactile reality, inspired by the study of paper and ink, yet technologically advanced and open to imagination and magic.
        \n\nSurfaces and edges of the material provide visual cues that are grounded in reality. The use of familiar tactile attributes helps users quickly understand affordances. Yet the flexibility of the material creates new affordances that supercede those in the physical world, without breaking the rules of physics.
        \n\nThe fundamentals of light, surface, and movement are key to conveying how objects move, interact, and exist in space and in relation to each other. Realistic lighting shows seams, divides space, and indicates moving parts.
        \n\n<b>Bold, graphic, intentional</b>
        \n\nThe foundational elements of print-based design—typography, grids, space, scale, color, and use of imagery—guide visual treatments. These elements do far more than please the eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge-to-edge imagery, large-scale typography, and intentional white space create a bold and graphic interface that immerse the user in the experience.
        \n\nAn emphasis on user actions makes core functionality immediately apparent and provides waypoints for the user.
        \n\n<b>Motion provides meaning</b>
        \n\nMotion respects and reinforces the user as the prime mover. Primary user actions are inflection points that initiate motion, transforming the whole design.
        \n\nAll action takes place in a single environment. Objects are presented to the user without breaking the continuity of experience even as they transform and reorganize.
        \n\nMotion is meaningful and appropriate, serving to focus attention and maintain continuity. Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.
    </string>
    <string name="fragment_environment">Environment</string>
    <string name="fragment_environment_3d_world">3D world</string>
    <string name="fragment_environment_3d_world_txt">The material environment is a 3D space, which means all objects have x, y, and z dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the positive z-axis extending towards the viewer. Every sheet of material occupies a single position along the z-axis and has a standard 1dp thickness.
        \n\nOn the web, the z-axis is used for layering and not perspective, so the 3D world is emulated by manipulating the y-axis.
    </string>
    <string name="fragment_environment_light_and_shadow">Light and shadow</string>
    <string name="fragment_environment_light_and_shadow_txt">Within the material environment, virtual lights illuminate the scene. Key lights create directional shadows, while ambient light creates soft shadows from all angles.
        \n\nShadows in the material environment are cast by these two light sources. In Android development, shadows occur when light sources are blocked by sheets of material at various positions along the z-axis. On the web, shadows are depicted by manipulating the y-axis only.
    </string>
    <string name="fragment_material_properties">Material properties</string>
    <string name="fragment_material_properties_txt">Material has certain immutable characteristics and inherent behaviors. Understanding these qualities will help you manipulate material in a way that’s consistent with the vision of material design.</string>
    <string name="fragment_material_properties_physical_properties">Physical properties</string>
    <string name="register_application_hint_title">Title</string>
    <string name="register_application_hint_price">Price</string>
    <string name="register_application_hint_location">Location (optional)</string>
    <string name="register_application_hint_description">Description</string>
    <string name="register_contact_hint_name">Full Name</string>
    <string name="register_contact_hint_phone">Phone number</string>
    <string name="register_contact_hint_email">Email</string>
    <string name="register_contact_hint_address">Address</string>
    <string name="register_contact_hint_ringtone">Ringtone</string>
    <string name="register_contact_hint_add_note">Add note</string>
    <string name="register_event_hint_from">From</string>
    <string name="register_event_hint_location">Location</string>
    <string name="register_event_hint_to">To</string>
    <string name="register_event_hint_timezone">Timezone</string>
    <string name="register_event_txt_all_day">All day</string>
    <string name="register_note_hint_title">Title</string>
    <string name="register_note_hint_description">Description</string>
    <string name="register_note_hint_extra">More descriptive text</string>
</resources>