<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/keyline_1"
    tools:context=".ui.activity.RegisterNoteActivity">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/register_note_medt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_note_hint_title"
        android:minHeight="@dimen/touch_target_48dp"
        app:maxCharacters="50"
        app:floatingLabel="highlight"
        app:floatingLabelText="@string/register_note_hint_title" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/register_note_medt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_note_hint_description"
        android:minHeight="@dimen/touch_target_48dp"
        app:maxCharacters="120"
        app:floatingLabel="highlight"
        app:floatingLabelText="@string/register_note_hint_description" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/register_note_medt_extra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_note_hint_extra"
        android:minHeight="@dimen/touch_target_48dp"
        app:floatingLabel="highlight"
        app:floatingLabelText="@string/register_note_hint_extra" />
</LinearLayout>
