<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/keyline_1_material"
    android:layout_marginStart="@dimen/keyline_1_material"
    android:orientation="vertical"
    tools:context=".ui.components.text_fields.RegisterApplicationActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_application_edt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_application_hint_title"
            android:inputType="textCapWords"
            android:nextFocusDown="@+id/register_application_edt_price"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_application_edt_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_application_hint_price"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:nextFocusRight="@+id/register_application_edt_location"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_application_edt_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_application_hint_location"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_application_edt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_application_hint_description"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
