<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/keyline_1"
    android:layout_marginStart="@dimen/keyline_1"
    android:orientation="vertical"
    tools:context=".ui.activity.RegisterContactActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/register_contact_img_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:backgroundTintMode="src_in"
            android:src="@drawable/social_ic_person"
            android:tint="?android:attr/textColorSecondary" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/register_contact_edt_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_48dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/keyline_2_minus_40dp"
            android:layout_toEndOf="@+id/register_contact_img_name"
            android:gravity="bottom"
            android:hint="@string/register_contact_hint_name"
            app:primaryColor="?android:attr/colorAccent"
            tools:text="Person Name" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/register_contact_img_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:backgroundTintMode="src_in"
            android:src="@drawable/communication_ic_call"
            android:tint="?android:attr/textColorSecondary" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/register_contact_medt_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_48dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/keyline_2_minus_40dp"
            android:layout_toEndOf="@+id/register_contact_img_phone"
            android:layout_toStartOf="@+id/register_contact_medt_phone_type"
            android:gravity="bottom"
            android:hint="@string/register_contact_hint_phone"
            app:primaryColor="?android:attr/colorAccent"
            tools:text="555-5555-555" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/register_contact_medt_phone_type"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/touch_target_48dp"
            android:layout_alignParentEnd="true"
            android:editable="false"
            android:gravity="bottom"
            android:maxLines="1"
            android:minWidth="96dp"
            app:primaryColor="?android:attr/colorAccent" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/register_contact_img_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:backgroundTintMode="src_in"
            android:src="@drawable/communication_ic_email"
            android:tint="?android:attr/textColorSecondary" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/register_contact_medt_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_48dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/keyline_2_minus_40dp"
            android:layout_toEndOf="@+id/register_contact_img_email"
            android:layout_toStartOf="@+id/register_contact_medt_email_type"
            android:gravity="bottom"
            android:hint="@string/register_contact_hint_email"
            app:primaryColor="?android:attr/colorAccent"
            tools:text="email@mail.com" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/register_contact_medt_email_type"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/touch_target_48dp"
            android:layout_alignParentEnd="true"
            android:editable="false"
            android:gravity="bottom"
            android:maxLines="1"
            android:minWidth="96dp"
            app:primaryColor="?android:attr/colorAccent" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/register_contact_img_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:backgroundTintMode="src_in"
            android:src="@drawable/maps_ic_place"
            android:tint="?android:attr/textColorSecondary" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/register_contact_medt_address"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_48dp"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginStart="@dimen/keyline_2_minus_40dp"
            android:layout_toEndOf="@+id/register_contact_img_address"
            android:layout_toStartOf="@+id/register_contact_medt_address_type"
            android:gravity="bottom"
            android:hint="@string/register_contact_hint_address"
            app:primaryColor="?android:attr/colorAccent"
            tools:text="518 Bacon Drive, Eggs Hills, CA" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/register_contact_medt_address_type"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/touch_target_48dp"
            android:layout_alignParentEnd="true"
            android:editable="false"
            android:gravity="bottom"
            android:maxLines="1"
            android:minWidth="96dp"
            app:primaryColor="?android:attr/colorAccent" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/register_contact_img_ringtone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:backgroundTintMode="src_in"
            android:src="@drawable/av_ic_volume_up"
            android:tint="?android:attr/textColorSecondary" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/register_contact_medt_ringtone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_48dp"
            android:layout_marginStart="@dimen/keyline_2_minus_40dp"
            android:layout_toEndOf="@+id/register_contact_img_ringtone"
            android:gravity="bottom"
            android:hint="@string/register_contact_hint_ringtone"
            app:primaryColor="?android:attr/colorAccent"
            tools:text="Dring" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/register_contact_img_add_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:backgroundTintMode="src_in"
            android:src="@drawable/content_ic_add"
            android:tint="?android:attr/textColorSecondary" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/register_contact_medt_add_note"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_48dp"
            android:layout_marginStart="@dimen/keyline_2_minus_40dp"
            android:layout_toEndOf="@+id/register_contact_img_add_note"
            android:gravity="bottom"
            android:hint="@string/register_contact_hint_add_note"
            app:primaryColor="?android:attr/colorAccent"
            tools:text="I am a short note." />
    </RelativeLayout>
</LinearLayout>
