<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.components.text_fields.RegisterEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_event_edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/keyline_1_material"
            android:layout_marginStart="@dimen/keyline_1_material"
            android:background="@null"
            android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp_alpha54"
            android:drawablePadding="@dimen/padding_small"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/touch_target_56dp"
            android:singleLine="true"
            tools:text="email@mail.com"/>

        <include layout="@layout/divider_horizontal"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/keyline_1_material"
            android:layout_marginStart="@dimen/keyline_1_material"
            android:layout_marginTop="@dimen/margin_medium">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_event_edt_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_event_hint_title"
                android:inputType="textCapWords"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/keyline_1_material"
            android:layout_marginStart="@dimen/keyline_1_material"
            android:layout_marginTop="@dimen/margin_medium">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_event_edt_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_event_hint_location"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/keyline_1_material"
            android:layout_marginStart="@dimen/keyline_1_material"
            android:layout_marginTop="@dimen/margin_medium"
            android:gravity="bottom"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_weight="5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_event_edt_from_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp_alpha54"
                    android:drawablePadding="@dimen/padding_small"
                    android:hint="@string/register_event_hint_from"
                    android:inputType="none"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/register_event_edt_from_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp_alpha54"
                android:drawablePadding="@dimen/padding_small"
                android:inputType="none"
                android:singleLine="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/keyline_1_material"
            android:layout_marginStart="@dimen/keyline_1_material"
            android:layout_marginTop="@dimen/margin_medium"
            android:gravity="bottom"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_weight="5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/register_event_edt_to_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp_alpha54"
                    android:drawablePadding="@dimen/padding_small"
                    android:hint="@string/register_event_hint_to"
                    android:inputType="none"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/register_event_edt_to_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp_alpha54"
                android:drawablePadding="@dimen/padding_small"
                android:inputType="none"
                android:singleLine="true"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/register_event_cbx_all_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/keyline_1_material"
            android:layout_marginStart="@dimen/keyline_1_material"
            android:minHeight="@dimen/touch_target_48dp"
            android:paddingStart="@dimen/padding_large"
            android:text="@string/register_event_txt_all_day"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/keyline_1_material"
            android:layout_marginStart="@dimen/keyline_1_material"
            android:layout_marginTop="@dimen/margin_medium">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/register_event_edt_timezone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp_alpha54"
                android:drawablePadding="@dimen/padding_small"
                android:hint="@string/register_event_hint_timezone"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>

